[project]
name = "tadela"
version = "0.1.0"
description = "project"
authors = [
    {name = "rahmo96",email = "raha1996@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "logging (>=0.4.9.6,<0.5.0.0)",
    "fastapi (>=0.116.1,<0.117.0)",
    "requests (>=2.32.4,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
